--- a/index.html
+++ b/index.html
@@ -3,14 +3,41 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>Artistas</title>
     </head>
 
     <body>
-        <h1></h1>
-        <div></div>
-        <div></div>
-        <img src="" alt="">
-        <img src="" alt="">
+        <h1>Artistas</h1>
+        <ul>
+            <li>
+                <div><b>Coldplay</b></div>
+                <div>Coldplay es una banda británica de rock formada en Londres en 1997. Está integrada por Chris Martin, Jonny Buckland, Guy Berryman, Will Champion y Phil Harvey.​</div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsDTPgSuKRqnXg30Oxag4OIyFWK_eqFLLSJA&s" alt="imagen de artista" width="200px">
+            </li>
+
+            <li>
+                <div><b>Bruno Mars</b></div>
+                <div>Peter Gene Hernandez, conocido artísticamente como Bruno Mars, es un cantante, compositor, productor musical y bailarín estadounidense.</div>
+                <img src="https://cdns-images.dzcdn.net/images/artist/7f3c0956357c326b2db2cf436f1dc8c5/500x500.jpg" alt="imagen de artista" width="200px">
+            </li>
+
+            <li>
+                <div><b>Paulo Londra</b></div>
+                <div>Paulo Ezequiel Londra es un cantante y compositor argentino. Londra surgió de las competencias de freestyle de plaza que se celebraban de forma amateur, como El Quinto Escalón, donde adquirió reconocimiento por su particular estilo de rapear.</div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXNG9IdnPUcIVR3eMDx9H9eGH4Go6OK1QwnQ&s" alt="imagen de artista" width="200px">
+            </li>
+
+            <li>
+                <div><b>Maroon 5</b></div>
+                <div>Maroon 5 es una banda musical de pop rock​ estadounidense. Desde su debut en 2001, la banda ha vendido más de 30 millones de álbumes y 48 millones de sencillos mundialmente.</div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9hwmqX3ajI41HGamYCqATRzJ5suO9gpIMuA&s" alt="imagen de artista" width="200px">
+            </li>
+
+            <li>
+                <div><b>Feid</b></div>
+                <div>Salomón Villeda Hoyos​, conocido por su nombre artístico Feid o Ferxxo, ​ es un cantante, rapero, compositor y productor discográfico colombiano.</div>
+                <img src="https://cdns-images.dzcdn.net/images/artist/440bf7345b941bba04f8df7a1df2d267/1900x1900-000000-80-0-0.jpg" alt="imagen de artista" width="200px">
+            </li>
+        </ul>
     </body>
 </html>
